{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 85,
  "lineage": "07ce54ac-0297-b99a-4aa5-6db4e1294f35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elistic_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0cca91f7779441ec7",
            "domain": "vpc",
            "id": "eipalloc-01d443ddba2a98848",
            "network_interface": "eni-0de153225e1744115",
            "private_dns": "ip-172-16-1-14.ec2.internal",
            "private_ip": "172.16.1.14",
            "public_dns": "ec2-184-73-43-1.compute-1.amazonaws.com",
            "public_ip": "184.73.43.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Server1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:155614228264:instance/i-0d69441521f4a5415",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d69441521f4a5415",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a73d75b85adf81a5",
            "private_dns": "ip-172-16-1-100.ec2.internal",
            "private_ip": "172.16.1.100",
            "public_ip": "100.26.54.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dd00e94c6cc5eabf",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046aabc36b44e88a2",
            "tags": {
              "Name": "Webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c2daecdb63ad5776"
            ]
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:155614228264:instance/i-0af95e70150af24f9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af95e70150af24f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0141aba8341daa1ad",
            "private_dns": "ip-172-16-2-196.ec2.internal",
            "private_ip": "172.16.2.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06cab5fe700475f6d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fae41613c0aad981",
            "tags": {
              "Name": "dbserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d90bd377056578e9"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098f16afa9edf40be",
            "arn": "arn:aws:ec2:us-east-1:155614228264:instance/i-066406a247d0b1da6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066406a247d0b1da6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec34220f04a9382f",
            "private_dns": "ip-172-16-2-85.ec2.internal",
            "private_ip": "172.16.2.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a14df57f130a199e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fae41613c0aad981",
            "tags": {
              "Name": "dbserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d90bd377056578e9"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:internet-gateway/igw-00c0951a7580e8823",
            "id": "igw-00c0951a7580e8823",
            "owner_id": "155614228264",
            "vpc_id": "vpc-04bc3cc25dabdff46"
          },
          "dependencies": [
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d443ddba2a98848",
            "id": "nat-09a3d05ac307403f8",
            "network_interface_id": "eni-0de153225e1744115",
            "private_ip": "172.16.1.14",
            "public_ip": "184.73.43.1",
            "subnet_id": "subnet-046aabc36b44e88a2"
          },
          "dependencies": [
            "aws_eip.elistic_eip",
            "aws_internet_gateway.intgw",
            "aws_subnet.public_subnet",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00c0951a7580e8823",
            "id": "r-rtb-0fb0be95028ead1aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb0be95028ead1aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.intgw",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02ee81856aa2268b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-09a3d05ac307403f8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ee81856aa2268b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.elistic_eip",
            "aws_internet_gateway.intgw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ee81856aa2268b2",
            "owner_id": "155614228264",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09a3d05ac307403f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-04bc3cc25dabdff46"
          },
          "dependencies": [
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf53cd0bcd179766",
            "route_table_id": "rtb-02ee81856aa2268b2",
            "subnet_id": "subnet-0fae41613c0aad981"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ca410a8c7f11d2",
            "route_table_id": "rtb-0fb0be95028ead1aa",
            "subnet_id": "subnet-046aabc36b44e88a2"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:security-group/sg-0ae2589e0aa7c7398",
            "description": "ONLY tcp CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae2589e0aa7c7398",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2daecdb63ad5776"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database",
            "name_prefix": null,
            "owner_id": "155614228264",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04bc3cc25dabdff46"
          },
          "dependencies": [
            "aws_security_group.FrontEnd",
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "FrontEnd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:security-group/sg-0c2daecdb63ad5776",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2daecdb63ad5776",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FrontEnd",
            "name_prefix": null,
            "owner_id": "155614228264",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04bc3cc25dabdff46"
          },
          "dependencies": [
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:subnet/subnet-0fae41613c0aad981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-0fae41613c0aad981",
            "map_public_ip_on_launch": false,
            "owner_id": "155614228264",
            "tags": {
              "Name": "Private_subet"
            },
            "vpc_id": "vpc-04bc3cc25dabdff46"
          },
          "dependencies": [
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:subnet/subnet-046aabc36b44e88a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-046aabc36b44e88a2",
            "map_public_ip_on_launch": false,
            "owner_id": "155614228264",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-04bc3cc25dabdff46"
          },
          "dependencies": [
            "aws_vpc.shekhar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shekhar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:155614228264:vpc/vpc-04bc3cc25dabdff46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0c11c96c85dacf60f",
            "default_route_table_id": "rtb-0fb0be95028ead1aa",
            "default_security_group_id": "sg-0d90bd377056578e9",
            "dhcp_options_id": "dopt-536ac729",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04bc3cc25dabdff46",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fb0be95028ead1aa",
            "owner_id": "155614228264",
            "tags": {
              "Name": "AWS_Class"
            }
          }
        }
      ]
    }
  ]
}